[tool.poetry]
name = "cpython-lldb"
version = "0.1.0"
description = "LLDB script for debugging of CPython processes"
license = "MIT"

authors = [
    "Roman Podoliaka <roman.podoliaka@gmail.com>",
]

readme = "README.md"
repository = "https://github.com/malor/cpython-lldb"
homepage = "https://github.com/malor/cpython-lldb"

keywords = ["debugging", "lldb", "cpython"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
six = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^4.4.0"
pytest-xdist = "^1.34.0"
test_extension = { path = "tests/test_extension/" }
