[tool.poetry]
name = "cpython-lldb"
version = "0.0.0"
description = "LLDB script for debugging of CPython processes"
license = "MIT"

authors = [
    "Roman Podoliaka <roman.podoliaka@gmail.com>",
]

readme = "README.md"
repository = "https://github.com/malor/cpython-lldb"
homepage = "https://github.com/malor/cpython-lldb"

keywords = ["debugging", "lldb", "cpython"]

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"
six = "^1.0.0"

[tool.poetry.dev-dependencies]
pexpect = "^4.8.0"
# we want to specify the depedency on pytest here as well, but that confuses poetry, so we rely
# on pytest-xdist to depend on pytest transitively instead
pytest-xdist = [
    {version = "^1.34.0", python = "<3.6"},
    {version = "^2.3.0",  python = "^3.6"},
]
test_extension = { path = "tests/test_extension/" }
