[tool.poetry]
name = "cpython-lldb"
version = "0.0.0"
description = "LLDB extension for debugging Python programs"
license = "MIT"

authors = [
    "Roman Podoliaka <roman.podoliaka@gmail.com>",
]

readme = "README.md"
repository = "https://github.com/malor/cpython-lldb"
homepage = "https://github.com/malor/cpython-lldb"

keywords = ["debugging", "lldb", "cpython"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-xdist = "^2.5.0"
pexpect = "^4.8.0"
test_extension = { path = "tests/test_extension/" }
